--- a/pretix_swap/templates/pretix_swap/presale/require_approval_box.html
+++ b/pretix_swap/templates/pretix_swap/presale/require_approval_box.html
@@ -6,11 +6,15 @@
         <h3 class="panel-title">{% trans "Ticket transfer" %}</h3>
     </div>
     <div class="panel-body">
-        {% trans "If you know somebody who has a ticket and would like to pass it to you, give them this token (your order code) to enter on their ticket page:" %}
-            <span class="btn btn-default">
-        <span data-toggle="tooltip" data-placement="bottom" title="{% trans "Click to copy" %}" class="copyable" data-destination="{{ secret }}">
-            {{ secret }}
-            </span></span>
+        {% if not in_progress %}
+            {% trans "If you know somebody who has a ticket and would like to pass it to you, give them this token (your order code) to enter on their ticket page:" %}
+                <span class="btn btn-default">
+            <span data-toggle="tooltip" data-placement="bottom" title="{% trans "Click to copy" %}" class="copyable" data-destination="{{ secret }}">
+                {{ secret }}
+                </span></span>
+        {% else %}
+            {% trans "Somebody has requested to pass their ticket to you. Please wait until this transfer is approved by the event organizers." %}
+        {% endif %}
     </div>
 </div>
 
