--- a/pretix_swap/templates/pretix_swap/presale/order_box.html
+++ b/pretix_swap/templates/pretix_swap/presale/order_box.html
@@ -4,7 +4,7 @@
 
 <div class="panel panel-primary">
     <div class="panel-heading">
-        <h3 class="panel-title">{% trans "Swap items" %}</h3>
+        <h3 class="panel-title">{% trans "Ticket transfer" %}</h3>
     </div>
     <div class="panel-body">
         <ol>
