--- a/pretix_swap/templates/pretix_swap/presale/new.html
+++ b/pretix_swap/templates/pretix_swap/presale/new.html
@@ -31,6 +31,7 @@
         <div class="clearfix"></div>
     </h2>
     <form method="post">{% csrf_token %}
+    {% bootstrap_form_errors form %}
     {% if form.position %}
         {% bootstrap_field form.position %}
     {% endif %}
